[package]
name = "rst-2fa-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
base32 = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
envy = "0.4.2"
log = { version = "0.4.21", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
totp-rs = { version = "5.5.1", features = ["otpauth"] }
